# hwr-study-c

./: CMakeLists.txt  README.md  exercise.c  exercise_2.c  exercise_3.c  main.c
exercise_2/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c
exercise_3/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c
exercise_5/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
exercise_7/: task_1.c  task_2.c  task_3.c  task_4.c
exercise_7/task_1_modules/: palindrome.c  palindrome.h
exercise_7/task_2_modules/: CMakeLists.txt  voidStack.c  voidStack.h
exercise_7/task_3_modules/: geometry.c  geometry.h
exercise_9/: task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c
inClassStudies/: pointer.c
inClassStuff/: queue.c  spaceallocation.c
mock_exam/: README.md  ancestry.c  classBook.c  main.c
mock_exam/ancestry_modules/: ancestry.c  ancestry.h
mock_exam/classBook_modules/: classBook.c  classBook.h
